<resources>
    <string name="app_name">MMovies</string>
    <string name="tmdb">TMDb</string>

    <!-- Themes -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_green">Green</string>

    <!-- Welcome items -->
    <string name="welcome_to_mmovies">Welcome to MaterialMovies</string>
    <string name="welcome_desc">Swipe to learn more.</string>
    <string name="use_mmovies_title">Use MaterialMovies anywhere.</string>
    <string name="use_mmovies_desc">Enjoy your favourite movies, TV shows anytime, anywhere.</string>
    <string name="welcome_extras_title">Movie trailers, and other extras.</string>
    <string name="welcome_extras_desc">Automatically get access to high quality online trailers and extras for the movies.</string>


    <!-- Main Menu -->
    <string name="movies_title">Movies</string>
    <string name="shows_title">Shows</string>
    <string name="people_title">People</string>
    <string name="popular_title">Popular</string>
    <string name="watched_title">Watched</string>
    <string name="preferences">Settings</string>
    <string name="search_title">Search</string>
    <string name="in_theatres_title">In theatres</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="on_the_air_title">On the air</string>

    <string name="drawer_open_content_desc">Drawer open</string>
    <string name="drawer_closed_content_desc">Drawer closed</string>


    <!-- Media items -->
    <string name="details">Details</string>
    <string name="movie_details_released">Released</string>
    <string name="movie_details_runtime">Runtime</string>
    <string name="movie_details_runtime_content">%1$d mins</string>

    <string name="movie_details_certification">Certification</string>
    <string name="movie_details_genres">Genres</string>
    <string name="movie_details_budget">Budget</string>
    <string name="movie_details_seasons">Seasons</string>
    <string name="movie_details_episodes">Episodes</string>
    <string name="movie_details_budget_content">$%,d</string>
    <string name="movie_details_language">Language</string>

    <string name="related_movies">Related</string>
    <string name="cast_movies">Cast</string>
    <string name="crew_movies">Crew</string>
    <string name="images_movies">Images</string>
    <string name="trailer_movie">Trailer</string>
    <string name="trailers_movies">Trailers</string>
    <string name="watched_movie">Watched</string>

    <string name="show_seasons">Seasons</string>
    <string name="biography">Biography</string>
    <string name="placeholder_rating">--</string>
    <string name="tvdb_range">/10</string>
    <string name="no_rating">n/a</string>
    <string name="show_isalive">Continuing</string>
    <string name="show_isnotalive">Ended</string>
    <string name="show_unknown">Scripted</string>
    <string name="tv_season_specials">Season Specials</string>
    <string name="tv_season_number">Season %1$d</string>
    <string name="season_air_date">Air date: %1$s</string>

    <!-- Tmdb ratings -->
    <plurals name="votes">
        <item quantity="zero">%d votes</item>
        <item quantity="one">%d vote</item>
        <item quantity="two">%d votes</item>
        <item quantity="few">%d votes</item>
        <item quantity="many">%d votes</item>
        <item quantity="other">%d votes</item>
    </plurals>


    <!-- Menu items -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_movie_websearch">Web search</string>
    <string name="menu_search">Search</string>

    <string name="menu_item_watchable_add_to_watched">Mark as seen</string>
    <string name="menu_item_show_is_watched">Show is seen</string>
    <string name="menu_item_movie_is_watched">Movie is seen</string>


    <!-- Action -->
    <string name="share_tv_show">Share tv show</string>
    <string name="share_movie">Share movie</string>
    <string name="share_checkout">Check out %s</string>
    <string name="label_back">Back</string>
    <string name="label_cancel">Cancel</string>
    <string name="web_search">Web search</string>
    <string name="explore">Explore</string>


    <string name="error_network">Network error</string>
    <string name="error_movie_not_found_tmdb">Movie not found at TMDb</string>
    <string name="error_unknown">Unknown error ¯\_(ツ)_/¯</string>

    <string name="movie_title_year">%1$s (%2$d)</string>
    <string name="movie_rating_votes">%1$d%% - %2$d votes</string>
    <string name="movie_release_date">Release date: %1$s</string>

    <string name="search_hint">Search Material Movies</string>


    <string name="category_watched">Your collection</string>
    <string name="category_movies">Movies</string>
    <string name="category_shows">Shows</string>
    <string name="category_settings">Settings</string>
    <string name="category_mail">Feedback</string>


    <string name="person_born_date">Born: %1$s</string>
    <string name="person_born_date_with_loc">Born: %1$s at %2$s</string>
    <string name="person_age">Age: %1$s</string>
    <string name="person_death_date">Died: %1$s, aged %2$s</string>

    <string name="settings_title">Settings</string>
    <string name="see_more">See more</string>

    <string name="activity_continue_with_caret">Continue   ❯</string>

    <string name="unknown_default">UNKNOWN</string>


    <!-- Appearance settings -->
    <string name="pref_appearance">Appearance</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_media_download">Automatic media download</string>

    <!-- Settings -->
    <string name="close_dialog_window">Close</string>
    <string name="prefs_category_basic">Basic Settings</string>
    <string name="prefs_category_cache">Cache Settings</string>
    <string name="prefs_category_about">Info and Other</string>
    <string name="pref_updatewifionly">Images via Wi-Fi only</string>
    <string name="pref_updatewifionlysummary">To reduce carrier data charges, don\'t download over mobile networks</string>
    <string name="pref_animations">Enable Transition animations</string>
    <string name="pref_animations_summary">Works on Anroid 5.0 and hire</string>

    <!-- Help -->
    <string name="feedback">Send feedback</string>


    <!-- Other advanced settings -->
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_summary">Remove all cached images from your device</string>

    <string name="local_database">Local Database</string>
    <string name="local_database_summary">Clearing tle local database will delete the data from your library.</string>

    <string name="build_version">Build version</string>
    <string name="creator">Creator</string>
    <string name="creator_context">AlexParfenjuk</string>
    <string name="powered_tmdb">Powered by TMDB</string>
    <string name="powered_tmdb_content">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="show_licenses">Show licenses</string>
    <string name="show_licenses_summary">Sweet software that helped me!</string>
    <string name="about_licenses_title">Open Source Licenses</string>
    <string name="ok">OK</string>



    <!-- Status messages -->
    <string name="loading_more">Loading more…</string>
    <string name="error_no_connection">You are offline</string>
    <string name="error_no_connection_body">Please check your internet connection.</string>
    <string name="offline">Connect to a network, then try again.</string>
    <string name="offline_no_wifi">Connect to Wi-Fi or allow all connections, then try again.</string>
    <string name="app_not_available">No app available to handle this.</string>

    <string name="empty_network_error">%1$s is not available while you`re offline. Please connect to the internet and try again.</string>

    <string name="empty_library_title">Your library is empty</string>
    <string name="empty_library_body">Explore the top rated movies and shows to find those you have watched!</string>

    <string name="action_item_added_to_watched">&lt;b>%s&lt;/b> &lt;em>added to watched&lt;/em></string>
    <string name="action_cleared_watched">Database successfully cleared!</string>

    <string name="nav_drawer_user_header_app_label">Material Movies</string>
    <string name="nav_drawer_user_header_movies_label">Watched movies</string>
    <string name="nav_drawer_user_header_shows_label">Watched shows</string>

    <!-- transition shared elements -->
    <string name="transition_poster" translatable="false">poster</string>
    <string name="transition_poster_background" translatable="false">poster_background</string>


</resources>
