<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mmovies="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >


    <include layout="@layout/fragment_no_drawer" />

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->

    <com.roodie.materialmovies.views.custom_views.MMNavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="?mmWavePatternDrawable"
        mmovies:itemIconTint="?mmTextColorSecondary"
        mmovies:itemTextColor="?mmTextColorPrimary"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        mmovies:headerLayout="@layout/item_account_header"
        mmovies:menu="@menu/drawer_view"
        />


</android.support.v4.widget.DrawerLayout>
