...
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


<LinearLayout
    android:id="@+id/search_view_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/faded_search_background"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="invisible">
...
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/label_back"
                android:tint="?mmSearchTextColor"
                android:src="@drawable/ic_back"/>

            <com.roodie.materialmovies.views.custom_views.MMoviesEditText
                android:id="@+id/search_edit"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                style="@style/Widget.MMovies.TextAppearance.PrimaryText.Search"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
...
